# rich-raycast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml
src/rich_raycast/: __init__.py
tests/: test_rich_raycast.py
