[project]
name = "rich-raycast"
version = "0.1.0"
description = "Rich helpers for beautiful Python Raycast Script Commands"
readme = "README.md"
authors = [
    { name = "caentzminger", email = "112503481+caentzminger@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.1a35",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
